Hemos añadido menú desde código y cada opción de menú te lleva a una Activity diferente (funciona)

--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -6,13 +6,13 @@
         android:id="@+id/meCopiar"
         android:title="copiar"
         android:orderInCategory="100"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:icon="@drawable/ic_copiar"/>
     <item
         android:id="@+id/mePegar"
         android:title="refrescar"
         android:orderInCategory="100"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:icon="@drawable/ic_refrescar"
         />
     <item
